--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,13 @@
 .countries {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  border-radius: 30px;
+  background-color: white;
+  grid-row-gap: 40px;
+  grid-column-gap: 50px;
 }
 .country {
-  border: 3px solid lightgoldenrodyellow;
+  border: 3px solid rgb(250, 250, 143);
   border-radius: 10px;
   padding: 20px;
   background-color: lightgreen;
@@ -11,4 +15,12 @@
 
 .country img {
   width: 200px;
+}
+
+.heading {
+  color: rgb(5, 5, 5);
+  font-size: 24px;
+  text-align: center;
+  background: rgba(255, 0, 0, 0.281);
+  border-radius: 10px;
 }
